# onboarding

./: .gitignore  README.md
ml/acoustic-features/: acoustic_features.ipynb
ml/ml-solutions/: README.md  data.dvc  metrics_notebook.ipynb  metrics_onboarding.md  pyproject.toml
ml/ml-solutions/.dvc/: config
ml/ml-solutions/notebooks/: SLU_Duckling_Entities_Exercise.ipynb  SLU_Training_Exercise.ipynb  metrics_notebook.ipynb
ml/ml-solutions/notebooks/utils/: __init__.py
ml/sessions/statistical-methods/: README.md  statistical-methods-1.ipynb
ml/slot-reporting/: slot-evaluation-and-reporting.ipynb
ml/slots-and-entities/: slots-and-entities.ipynb
ml/statistical-methods/: README.md  statistical-methods-1.ipynb
