[tool.poetry]
name = "ml-solutions"
version = "0.1.0"
description = "Exercises for MLSE onboarding chapters"
authors = ["ltbringer <amresh.venugopal@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyter = "^1.0.0"
numpy = "^1.21.2"
pandas = "^1.3.2"
dvc = "^2.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
